@@ -1,0 +1,11 @@
+.TH CALLD 1 "23 September 2011" Linux "FPAC Operator's Manual"
+.SH NAME
+calld \- AX.25 connection element for FPAC.
+.SH SYNOPSIS
+.B calld
+.SH DESCRIPTION
+.LP
+.B calld
+is a modification of ax25_call. The code has been modified to process ax25 calls within the FPAC node.
+.SH AUTHOR
+Bernard Pidoux F6BVP <bernard.f6bvp@gmail.com>
