@@ -1,0 +1,11 @@
+.TH WPSTRESS 1 "23 September 2011" Linux "FPAC Operator's Manual"
+.SH NAME 
+wpstress \- FPAC white pages database test tool.
+.SH SYNOPSIS
+.B wpstress
+.SH DESCRIPTION
+.LP
+.B wpstress
+is a test tool to generate random call signs to populate the white pages database.
+.SH AUTHOR
+Bernard Pidoux F6BVP <bernard.f6bvp@gmail.com>
